# mathtrader

./: .bazelrc  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  main.cpp  mathtrader.cpp  mathtrader.hpp  want2mt.awk  want2tm.awk  wantparser.cpp  wantparser.hpp
app/: CMakeLists.txt  config.hpp.in  mathtrader.cpp  routechecker.cpp
cfg/: doxyfile.cfg
cmake_extensions/: FindLemon.cmake
doc/: Doxyfile.in  LemonInstall.md
docs/: external.md  technical_notes.md
include/: PracticalSocket.h  algoabstract.hpp  algowrapper.hpp  basemath.hpp  baseparser.hpp  mathtrader.hpp  resultparser.hpp  routechecker.hpp  wantparser.hpp
lib/iograph/: CMakeLists.txt
lib/iograph/include/iograph/: baseparser.hpp
lib/iograph/src/: PracticalSocket.cpp  PracticalSocket.hpp  baseparser.cpp  resultparser.cpp  wantparser.cpp  wantparser_input.cpp  wantparser_output.cpp  wantparser_wantlists.cpp
lib/iograph/test/: config.hpp.in  testlib.cpp
lib/iograph/test/testcases/: simple-wantlist.txt
lib/solver/: CMakeLists.txt
lib/solver/include/solver/: mathtrader.hpp
lib/solver/src/: lemon_io.hpp  mathtrader.cpp  mathtrader_io.cpp  mathtrader_options.cpp  routechecker.cpp
lib/solver/test/: testlib.cpp
mathtrader/: CMakeLists.txt  technical_notes.md
mathtrader/assignment/: BUILD  assignment.proto  assignment_builder.cc  assignment_builder.h  assignment_builder_test.cc  network_builder.cc  network_builder.h  network_builder_test.cc
mathtrader/assignment/internal/: BUILD  README.md  arc_builder.cc  arc_builder.h  arc_builder_test.cc
mathtrader/common/: BUILD  README.md  arc.proto  assignment.proto  flow_network.proto  item.proto  item_attributes.h  item_attributes_test.cc  node.proto  offered_item.proto  trade_request.proto  trade_response.proto  wanted_item.proto  wantlist.proto
mathtrader/iograph/: CMakeLists.txt
mathtrader/iograph/include/iograph/: baseparser.hpp  wantparser.hpp
mathtrader/iograph/src/: PracticalSocket.cpp  PracticalSocket.h  wantparser.cpp  wantparser_input.cpp  wantparser_output.cpp  wantparser_wantlists.cpp
mathtrader/iograph/test/: testlib.cpp
mathtrader/network/: BUILD  network_builder.cc  network_builder.h  network_builder_test.cc
mathtrader/network/internal/: BUILD  README.md  arc_builder.cc  arc_builder.h  arc_builder_test.cc  node_builder.cc  node_builder.h  node_builder_test.cc  node_util.h
mathtrader/parser/: BUILD  README.md  math_parser.cc  math_parser.h  math_parser_olwlg_test.cc  math_parser_test.cc  parser_result.proto  trade_request.proto
mathtrader/parser/internal/: BUILD  README.md  internal_parser.cc  internal_parser.h  internal_parser_api.cc  internal_parser_directives.cc  internal_parser_test.cc  internal_parser_wantlists.cc  internal_wantlist.proto  item_parser.cc  item_parser.h  item_parser_test.cc  wantlist_parser.cc  wantlist_parser.h  wantlist_parser_test.cc
mathtrader/parser/test_data/: 286103-officialwants.txt  286870-officialwants.txt  286928-officialwants.txt  BUILD  stats_officialwants.sh
mathtrader/parser/util/: BUILD  item_util.cc  item_util.h  item_util_test.cc
mathtrader/solver/: BUILD  CMakeLists.txt  solver.cc  solver.h  solver_olwlg_test.cc  solver_result.proto  solver_test.cc  trade_response.proto
mathtrader/solver/include/solver/: mathtrader.hpp  routechecker.hpp
mathtrader/solver/internal/: BUILD  README.md  trade_model.cc  trade_model.h  trade_model_test.cc  trade_request_extensions.proto
mathtrader/solver/src/: basemath.cpp  mathtrader.cpp
mathtrader/solver/test_data/: BUILD  disconnected_chains.dot  disconnected_chains.textproto  multiple_small_and_one_big_chain.dot  multiple_small_and_one_big_chain.textproto  run_graphviz.sh
mathtrader/util/: BUILD  str_indexer.cc  str_indexer.h  str_indexer_test.cc  str_toupper.cc  str_toupper.h  str_toupper_test.cc  strings_test.cc
olwlg_data/: 286149-officialwants.txt  BUILD  stats_officialwants.sh
src/: main.cpp  mathtrader.cpp  wantparser.cpp
src/common/: PracticalSocket.cpp  basemath.cpp  baseparser.cpp  wantparser.cpp
src/mathtrader/: main.cpp  mathtrader.cpp
src/routecheck/: main.cpp  resultparser.cpp  routechecker.cpp
